# SDL_Craft

./: CMakeLists.txt
shaders/: block_fragment.glsl  block_vertex.glsl  line_fragment.glsl  line_vertex.glsl  sky_fragment.glsl  sky_vertex.glsl  text_fragment.glsl  text_vertex.glsl
src/: config.h  db.c  main.c  util.c  util.h
